# dfrs

./: .gitignore  Cargo.toml  LICENSE  README.md  SYNTAX.md  syntax.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cli/: Cargo.toml
cli/src/: lsp.rs  main.rs
core/: Cargo.toml
core/src/: compile.rs  config.rs  decompile.rs  lexer.rs  lib.rs  node.rs  parser.rs  send.rs  token.rs  utility.rs  validate.rs
core/src/definitions/: action_dump.rs  actions.rs  conditionals.rs  events.rs  game_values.rs  mod.rs  player_actions.rs  repeats.rs
dfrs-language-support/: CHANGELOG.md  language-configuration.json  package-lock.json  package.json  vsc-extension-quickstart.md
dfrs-language-support/scripts/: extension.js  extension.ts
dfrs-language-support/syntaxes/: dfrs.tmLanguage.json
dfrs/src/: compile.rs  config.rs  decompile.rs  lexer.rs  lsp.rs  main.rs  node.rs  parser.rs  send.rs  token.rs  utility.rs  validate.rs
dfrs/src/definitions/: action_dump.json  action_dump.rs  actions.rs  events.rs  game_values.rs  mod.rs
examples/: checkpoints.dfrs  creative_for_owner.dfrs  dfrs.toml  join_messages.dfrs  player_loop.dfrs  save_player_locations.dfrs  test.dfrs
languageServer/: Cargo.toml
languageServer/src/: main.rs
src/: compile.rs  config.rs  decompile.rs  errors.rs  lexer.rs  lsp.rs  main.rs  minimessage.rs  node.rs  parser.rs  send.rs  token.rs  utility.rs  validate.rs
src/definitions/: action_dump.rs  actions.rs  events.rs  game_values.rs  mod.rs
test_project/: dfrs.toml  test.df  test.dfrs
website/: package-lock.json  package.json
(+4 files in other folders)
