[package]
name = "dfrs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
colored = "2.1.0"
dashmap = "5.5.3"
ropey = "1.6.1"
tokio = { version = "1.36.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
base64 = "0.21.7"
flate2 = "1.0.28"
phf = { version = "0.11.2", features = ["macros"] }
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
toml = "0.8.9"
tungstenite = "0.21.0"
url = "2.5.0"
regex = "1.12.2"
