[package]
name = "dfrs_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
flate2 = "1.0.28"
phf = { version = "0.11.2", features = ["macros"] }
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
toml = "0.8.9"
tungstenite = "0.21.0"
url = "2.5.0"
