[package]
name = "dfrs_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
ropey = "1.6.1"
tokio = { version = "1.36.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"]}
serde_json = "1.0.113"
dfrs_core = { path = "../core" }